text-truncate fixed, image carousel fixed, and backend create and edit imovels select options.

--- a/resources/assets/backend/sass/costume.scss
+++ b/resources/assets/backend/sass/costume.scss
@@ -49,3 +49,11 @@ margin-bottom: 3px;;
     color: #605d5d;
     font-weight: 600;
     }
+    .text-truncate{
+        max-width: 200px;
+    }
+    .option-selected
+    {
+        background-color: rgb(87, 85, 85) !important;
+        color: #f6f6f6 !important;
+    }
